<resources>
    <string name="app_name">Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="menu_addPlacemark">Add Placemark</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="enter_placemark_title"> Please enter a Placemark Title </string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_placemark_image">Change placemark image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="title_activity_placemark_maps">Map of all Placemarks</string>
    <string name="title_activity_placemark_list">Placemarks</string>
    <string name="title_activity_placemark">Placemark</string>
    <string name="title_activity_edit_location">Placemark</string>
    <string name="title_activity_login"> Signup/Login to Placemark</string>
    <string name="title_activity_splashscreen"> SplashScreen</string>
    <string name="google_maps_key">AIzaSyDDDFtSzU8u2E6KV90BGV9Rm8MrRAbW09M</string>
</resources>
