<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/item_add"
    android:icon="@android:drawable/ic_menu_add"
    android:title="@string/menu_addPlacemark"
    app:showAsAction="never"/>

  <item
      android:id="@+id/item_search_hillfort"
      android:icon="@android:drawable/ic_menu_mapmode"
      android:title="Sarch Hillfort"
      app:showAsAction="never"/>

  <item
    android:id="@+id/item_map"
    android:icon="@android:drawable/ic_menu_mapmode"
    android:title="@string/menu_showMap"
    app:showAsAction="never"/>

  <item
      android:id="@+id/item_favourites"
      android:icon="@android:drawable/ic_menu_mapmode"
      android:title="Favourites"
      app:showAsAction="never"/>

  <item
      android:id="@+id/item_navigator"
      android:icon="@android:drawable/ic_menu_mapmode"
      android:title="Navigator"
      app:showAsAction="never"/>

  <item
      android:id="@+id/item_setting"
      android:icon="@android:drawable/ic_menu_mapmode"
      android:title="Settings"
      app:showAsAction="never"/>

  <item
    android:id="@+id/item_logout"
    android:title="@string/menu_logout"
    android:visible="true"
    app:showAsAction="never" />
</menu>